updated privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -350,8 +350,7 @@
         <div class="section contact-info">
             <h2>Contact Us</h2>
             <p>If you have any questions about this Privacy Policy, You can contact us:</p>
-            <p><strong>Email:</strong> privacy@protoolkit.com</p>
-            <p><strong>By visiting this page on our website:</strong> www.protoolkit.com/contact</p>
+            <p><strong>Email:</strong> faisal.hossain.pk@gmail.com</p>
             <p><strong>Address:</strong> Dhaka, Bangladesh</p>
         </div>
 
